--- a/Week 1/assets/css/style.css
+++ b/Week 1/assets/css/style.css
@@ -56,7 +56,7 @@ p {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
-    background-image: url("assets/images/digital-marketing-meeting.jpg");
+    background-image: url("../images/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
 }
@@ -75,9 +75,10 @@ p {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
+}
+article {
     margin-bottom: 20px;
-    padding: 50px;
-    float: left;
+    padding: 20px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff;
@@ -87,23 +88,28 @@ p {
     max-width: 200px;
 }
 
-.benefits .nav{
+.benefits {
     margin-right: 20px;
     padding: 20px;
+    clear: both;
     float: right;
     width: 20%;
+    height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     margin-bottom: 32px;
     color: #ffffff;
-    text-align: center;
 }
 
-.benefits .nav img {
+.nav-img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
-    padding: 10px;
+}
+
+.benefits h2 {
+    margin-bottom: 10px;
+    text-align: center;
 }
 
 .footer {
